@startuml
title Paquete webots

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
hide empty members

package "webots" {
    class WebotsTractorAPI {
        - tractor : TractorAutonomo
        + WebotsTractorAPI()
        + avanzar(distancia : double, velocidad : double) : void
        + ajustarVelocidad(velocidad : double) : void
        + retroceder(distancia : double, velocidad : double) : void
        + frenar() : void
        + irA(x : double, y : double, velocidad : double) : void
        + irOrigen() : void
        + girar(angulo : double) : void
        + girarDerecha() : void
        + girarIzquierda() : void
        + girarSentidoContrario() : void
        + mostrar(mensaje : String) : void
        + arar(estado : boolean) : void
        + sembrar(estado : boolean) : void
        + regar(estado : boolean) : void
        + fumigar(estado : boolean) : void
    }

    class TractorAutonomo {
        - timeStep : int
        - DISTANCIA_OBSTACULO : double
        - MAX_VELOCIDAD : double
        - MIN_VELOCIDAD : double
        + TractorAutonomo()
        + avanzar(distancia : double, velocidad : double) : void
        + marchaAtras(distancia : double, velocidad : double) : void
        + marchaAtrasObstaculo() : void
        + girar(angle : double) : void
        + frenar() : void
        + irAPosicion(targetX : double, targetY : double, targetZ : double, velocidad : double) : void
        + arar(estado : boolean) : void
        + fumigar(estado : boolean) : void
        + regar(estado : boolean) : void
        + sembrar(estado : boolean) : void
    }

    class UtilidadesNavegacion {
        + normalizarAngulo(angle : double) : double
        + distancia(start : double[], end : double[]) : double
        + calcularAnguloHaciaObjetivo(posicionActual : double[], posicionObjetivo : double[]) : double
    }
}

package "plata" {
    interface TractorAPI
}

WebotsTractorAPI ..|> TractorAPI
WebotsTractorAPI *-- TractorAutonomo : adapta/controla
TractorAutonomo ..> UtilidadesNavegacion : usa

@enduml